--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 .vscode/settings.json
 *.csv
 *.csv
+daily_record.txt
+daily_record.txt
+daily_spectator.txt
+weekly_examiner.txt
+weekly_niagara.txt
+weekly_spectator.txt
+weekly_record.txt
