--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,14 @@ weekly_record.txt
 *.ps
 *.rtf
 *.ps
+*.pdf
+*.ps
+*.rtf
+*.pdf
+*.ps
+test_output.pdf
+test.ps
+spec_stats_daily_01012019.pdf
+output.rtf
+output.ps
+output.pdf
