--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ spec_stats_daily_01012019.pdf
 output.rtf
 output.ps
 output.pdf
+output.pdf
+output.pdf
+output.ps
+output.rtf
+spec_stats_daily_01012019.pdf
+test.ps
+test_output.pdf
