--- a/Pipfile
+++ b/Pipfile
@@ -8,12 +8,11 @@ name = "pypi"
 pyperclip = "*"
 autopep8 = "*"
 pandas = "*"
-seaborn = "*"
 matplotlib = "*"
-plotly = "*"
 
 [dev-packages]
 "flake8" = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.7"
